Jenkinsk8s/jenkins-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "jenkins-master"
    version: "latest"
    group: "jenkins"
    namespace: "jenkins"
    name: "jenkins-master-service"
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
    - name: "jnlp"
      port: 50000
      targetPort: 50000
  selector:
    app: "jenkins-master"
    version: "latest"
    group: "jenkins"
    type: "ClusterIP"
