Jenkinsk8s/jenkins-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  #tls:
  #  - hosts:
  #    - myfancy.domain.com
  #    secretName: my-fancy-certs
  rules:
  - host: jenkins.myapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
